@@ -1,3 +1,9 @@
+TAG: lib_py_littriage-6-0-11-?
+DATE: 12/21/2017
+STAFF: lec
+CHANGES:
+1) TR12747 - add 'PT'/publicationType to PubMedAgent.py
+
 TAG: lib_py_littriage-6-0-11-8
 DATE: 12/18/2017
 STAFF: sc
